--- a/EW&M WIKI/style.css
+++ b/EW&M WIKI/style.css
@@ -34,7 +34,9 @@ html {
     scroll-margin-top: 130px;
 }
 
+
 .download-btn {
+    display: none;
     background: var(--accent);
     color: white;
     text-shadow: 0 0 10px #FFFFFF;
@@ -44,6 +46,12 @@ html {
     border-radius: 6px;
     cursor: pointer;
     font-size: 1.1em;
+}
+
+@media (max-width: 900px) {
+    .download-btn {
+        display: block;
+    }
 }
 
 body {
